<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"

    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cvColeccion"
    android:layout_below="@+id/tvTituloColeccion"
    card_view:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:id="@+id/llTitulosCardTipoMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTituloCardTipoMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_moneda_default"
                android:textSize="@dimen/size_titulos"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/tvIrAColeccionCardTipoMoneda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ir_a_coleccion"
                android:gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="gravity"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/llTitulosCardTipoMoneda">

            <ProgressBar
                android:id="@+id/pvCantidadMonedas"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tvCantidadMonedasTipoMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/cantidad_moneda_default"/>

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>