<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="@dimen/padding_supremo"
        android:id="@+id/tvTituloResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_titulos"
        android:textAlignment="center"
        android:text="@string/titulo_home"
        android:paddingBottom="@dimen/padding_down_titulos"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlanco"
        />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/tvTituloTotalMonedasResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_texto_home"
        android:text="@string/home_total_monedas_coleccionadas"
        android:paddingBottom="@dimen/padding_separador_chico_home"
        android:paddingLeft="@dimen/padding_left_titulos_home"
        />

    <TextView
        android:id="@+id/tvTotalMonedasColeccionadasResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/texto_colecciondas_home"
        android:textColor="@color/colorPrimary"
        android:text="@string/cantidad_moneda_default"
        android:paddingBottom="@dimen/padding_separagor_grande_home"
        />

    <TextView
        android:id="@+id/tvUltimasAñadidasResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_texto_home"
        android:text="@string/ultimas_monedas"
        android:paddingBottom="@dimen/padding_separador_chico_home"
        android:paddingLeft="@dimen/padding_left_titulos_home"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_separagor_grande_home">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivUltimaMoneda1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvUltimaMoneda1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivUltimaMoneda2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvUltimaMoneda2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivUltimaMoneda3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvUltimaMoneda3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivUltimaMoneda4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvUltimaMoneda4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivUltimaMoneda5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvUltimaMoneda5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tvTrofeosObtenidosResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_texto_home"
        android:text="@string/trofeos_obtenidos"
        android:paddingBottom="@dimen/padding_separador_chico_home"
        android:paddingLeft="@dimen/padding_left_titulos_home"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivResumenTrofeo500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvResumenTrofeo500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom">
        <ImageView
            android:id="@+id/ivLineaAbajoHome"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>